--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -114,12 +114,12 @@
                         <li><a href="/portfolios/portfoliodetails">Two Column</a></li>
                       </ul>
                     </li>
-                    {{!-- <li class="menu-item-has-children">
+                    <li class="menu-item-has-children">
                       <a href="/blogs">Blogs</a>
                       <ul class="axil-submenu">
                         <li><a href="/blogs/blog-with-id">Blog details</a></li>
                       </ul>
-                    </li> --}}
+                    </li>
                     <li><a href="/about">About Us</a></li>
                     <li class=""><a href="/contact" class="p-0 ">Get Free Consultation</a></li>
                   </ul>
@@ -240,7 +240,7 @@
                       <div class="footer-menu-link">
                         <ul class="list-unstyled">
                           {{!-- <li><a href="/blogs">Blogs</a></li> --}}
-                          <li><a href="/services">Services</a></li>
+                          <li><a href="/services">Case Studies</a></li>
                           <li><a href="/portfolios">Portfolios</a></li>
                           <li><a href="/about">About-us</a></li>
                         </ul>
