--- a/views/partials/categoriesgrid.hbs
+++ b/views/partials/categoriesgrid.hbs
@@ -18,9 +18,9 @@
             </div>
             <div class="content">
               <h5 class="title">
-                <a href="service-design.html">{{this.name}}</a></h5>
+                <a href={{this.url}}>{{this.name}}</a></h5>
               <p>{{this.description}}</p>
-              <a href="service-design.html" class="more-btn">Find out more</a>
+              <a href={{this.url}} class="more-btn">Find out more</a>
             </div>
           </div>
         </div>
