--- a/views/partials/counters.hbs
+++ b/views/partials/counters.hbs
@@ -65,7 +65,7 @@
       >
         <div class="counterup-progress">
           <div class="icon">
-            <img src="assets/media/icon/apple.png" alt="Conglobase" />
+            <img src="assets/media/icon/conglobase.png" alt="Conglobase" />
           </div>
           <div class="count-number h2">
             <span class="number count" data-count="1">1</span>
