single service page integration done

--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -103,7 +103,7 @@
                       <a href="/">Home</a>
                     </li>
                     <li class="menu-item-has-children">
-                      <a href="/services/">Services</a>
+                      <a href="/services">Services</a>
                       <ul class="axil-submenu">
                         <li><a href="/services/details">Service</a></li>
                       </ul>
