--- a/views/partials/calltoaction.hbs
+++ b/views/partials/calltoaction.hbs
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="call-to-action">
       <div class="section-heading heading-light">
-        <span class="subtitle">Let's Work Together</span>
-        <h2 class="title">Need a successful project?</h2>
+        <span class="subtitle">{{serviceDetails.cta.headline}}</span>
+        <h2 class="title">{{serviceDetails.cta.title}}</h2>
         <a
-          href="/contact"
+          href="/{{serviceDetails.cta.url}}"
           class="axil-btn btn-large btn-fill-white"
-        >Contact Us</a>
+        >{{serviceDetails.cta.actionName}}</a>
       </div>
       <div class="thumbnail">
         <div
