--- a/views/services2.hbs
+++ b/views/services2.hbs
@@ -4,9 +4,11 @@
 <div class="breadcrum-area breadcrumb-banner">
     <div class="container">
         <div class="section-heading heading-left" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="300">
-            <h1 class="title h2">Best solutions for your business</h1>
-            <p>Give your business a unique logo to stand out from crowd. We’ll create logo specifically for your
-                company.</p>
+            <h1 class="title h2">Empowering Your Business for Growth &amp; Success!</h1>
+            <p>We understand the importance of a strong online presence for your business. Our expert team of digital
+                marketers are here to provide tailored solutions that will not only elevate your online presence, but
+                drive tangible results for your business.</p>
+            <a href="#onepagenav" class="btn btn-outline-warning">Let's Explore</a>
         </div>
         <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
             <img class="paralax-image" src="/assets/media/banner/banner-thumb-4.png" alt="Illustration">
@@ -32,10 +34,17 @@
     <nav id="onepagenav" class="service-scroll-nav navbar onepagefixed">
         <div class="container">
             <ul class="nav nav-pills">
+
+                {{#each categories}}
                 <li class="nav-item">
-                    <a class="nav-link" href="#section1">Design</a>
+                    <a class="nav-link" href="#{{this.slug}}">{{this.name}}</a>
                 </li>
-                <li class="nav-item">
+                {{/each}}
+
+                {{!-- <li class="nav-item">
+                    <a class="nav-link" href="#section1">Design</a>
+                </li> --}}
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="#section2">Development</a>
                 </li>
                 <li class="nav-item">
@@ -49,14 +58,14 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#section6">Content Strategy</a>
-                </li>
+                </li> --}}
             </ul>
         </div>
     </nav>
 
     {{#each categories}}
     <!-- Dynamic Service Component -->
-    <div class="section section-padding" id="section1">
+    <div class="section section-padding py-5" id={{this.slug}}>
         <div class="container">
             <div class="section-heading heading-left">
                 <span class="subtitle">Service</span>
@@ -68,7 +77,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="/assets/media/icon/icon-29.png" alt="icon">
+                            <img src={{this.iconUrl}} alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="services/{{this.slug}}">{{this.title}}</a></h5>
