--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -49,26 +49,30 @@
           <h3 class="title">Want to boost your Online Business</h3>
           <form
             method="POST"
-            action="https://new.axilthemes.com/demo/template/abstrak/mail.php"
+            action="/contact"
             class="axil-contact-form"
           >
             <div class="form-group">
               <label>Name</label>
-              <input type="text" class="form-control" name="contact-name" />
+              <input type="text" class="form-control" name="name" />
             </div>
             <div class="form-group">
               <label>Email</label>
-              <input type="email" class="form-control" name="contact-email" />
+              <input type="email" class="form-control" name="email" />
             </div>
             <div class="form-group">
-              <label>Company</label>
-              <input type="text" class="form-control" name="contact-company" />
+              <label>Contact</label>
+              <input type="phone" class="form-control" name="contact" />
+            </div>
+            <div class="form-group">
+              <label>Subject</label>
+              <input type="text" class="form-control" name="subject" />
             </div>
             <div class="form-group mb--40">
               <label>How can we help you?</label>
               <textarea
-                name="contact-message"
-                id="contact-message"
+                name="message"
+                id="message"
                 class="form-control textarea"
                 cols="30"
                 rows="4"
