--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
             project management. We work with clients to understand their
             specific needs and goals, and then tailor our solutions to meet
             those needs.</span>
-          <a href="contact.html" class="axil-btn btn-fill-primary btn-large">Get
+          <a href="contact" class="axil-btn btn-fill-primary btn-large">Get
             Started</a>
         </div>
       </div>
@@ -86,25 +86,25 @@
       <div class="col-xl-5 col-lg-6 offset-xl-1" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
         <div class="contact-form-box">
           <h3 class="title">Get a free Keystroke quote now</h3>
-          <form method="POST" action="https://new.axilthemes.com/demo/template/abstrak/mail.php"
+          <form method="POST" action="/contact"
             class="axil-contact-form">
             <div class="form-group">
               <label>Name</label>
-              <input type="text" class="form-control" name="contact-name" placeholder="John Smith" />
+              <input type="text" class="form-control" name="name" placeholder="Saurabh Sharma" />
             </div>
             <div class="form-group">
               <label>Email</label>
-              <input type="email" class="form-control" name="contact-email" placeholder="example@mail.com" />
+              <input type="email" class="form-control" name="email" placeholder="example@mail.com" />
             </div>
             <div class="form-group mb--40">
               <label>Phone</label>
-              <input type="tel" class="form-control" name="contact-company" placeholder="+123456789" />
+              <input type="tel" class="form-control" name="contact" placeholder="+91 9999999999" />
             </div>
             <div class="form-group">
               <button type="submit" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn">Get Free
                 Quote</button>
             </div>
-            <input type="hidden" class="form-control" name="contact-message" value="Null" />
+            <input type="hidden" class="form-control" name="message" value="I want free kestroke quote, Please contact me." />
           </form>
         </div>
       </div>
