--- a/views/thankyou.hbs
+++ b/views/thankyou.hbs
@@ -1,19 +1,19 @@
 <!--=====================================-->
-<!--=           404 Area Start          =-->
+<!--=           Thanks Area Start          =-->
 <!--=====================================-->
 <section class="error-page onepage-screen-area">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="content" data-sal="slide-up" data-sal-duration="800" data-sal-delay="400">
-                    <h2 class="title">Page not found</h2>
-                    <p>This page is not available or moved.</p>
+                    <h2 class="title">Congratualations!</h2>
+                    <p>You have subscribed for newsletter, offers and special discounts.</p>
                     <a href="/" class="axil-btn btn-fill-primary">Go Back</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="thumbnail" data-sal="zoom-in" data-sal-duration="800" data-sal-delay="400">
-                    <img src="assets/media/others/404.png" alt="404">
+                    <img src="assets/media/others/thanks.gif" alt="Thank You">
                 </div>
             </div>
         </div>
