Added mail functionality and contact

--- a/views/terms-and-conditions.hbs
+++ b/views/terms-and-conditions.hbs
@@ -72,8 +72,7 @@
             <li>Redistribute content from Conglobase</li>
         </ul>
 
-        <p>This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the <a
-                href="https://www.termsandconditionsgenerator.com/">Free Terms and Conditions Generator</a>.</p>
+        <p>This Agreement shall begin on the date hereof 02 Feb, 2023.</p>
 
         <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain
             areas of the website. Conglobase Solutions Private Limited does not filter, edit, publish or review Comments
