--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -54,8 +54,10 @@
                   <div class="mobile-nav-header">
                     <div class="mobile-nav-logo">
                       <a href="/">
-                        <img class="light-mode" src="/assets/media/Varients/SVG/conglobase_dark_grey.svg" alt="conglobase" style="width: 160px;" />
-                        <img class="dark-mode" src="/assets/media/Varients/SVG/conglobase_white.svg" alt="conglobase" style="width: 160px;" />
+                        <img class="light-mode" src="/assets/media/Varients/SVG/conglobase_dark_grey.svg"
+                          alt="conglobase" style="width: 160px;" />
+                        <img class="dark-mode" src="/assets/media/Varients/SVG/conglobase_white.svg" alt="conglobase"
+                          style="width: 160px;" />
                       </a>
                     </div>
                     <button class="mobile-menu-close" data-bs-dismiss="offcanvas"><i class="fas fa-times"></i></button>
@@ -203,7 +205,7 @@
                     </div>
                   </div>
                 </div>
-                
+
               </div>
             </div>
           </div>
@@ -248,6 +250,16 @@
   <script src="/assets/js/vendor/jquery.nav.js"></script>
   <!-- Site Scripts -->
   <script src="/assets/js/app.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-256768686-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-256768686-1');
+  </script>
+
 </body>
 
 </html>
